comment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: comment-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-service
  ports:
  - port: 3002
    targetPort: 3002
