post-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
      - name: post-service
        image: post-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
  - port: 3001
    targetPort: 3001
